--- a/app/src/main/res/layout/activity_kkscan.xml
+++ b/app/src/main/res/layout/activity_kkscan.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.user.ktp.KtpScanActivity">
+    tools:context=".ui.user.kk.KKScanActivity">
 
     <TextView
         android:id="@+id/headerTv"
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/ktp"
+        android:text="@string/kartu_keluarga"
         android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/description_scan"
+        android:text="@string/desc_kk"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerTv" />
@@ -40,9 +40,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:contentDescription="@string/preview_gambar_ktp"
-        android:padding="14dp"
-        android:scaleType="centerCrop"
+        android:contentDescription="@string/preview_gambar_kk"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/gHorizontal2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +56,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/secondary"
-        android:padding="14dp"
         android:text="@string/open_camera"
         app:layout_constraintEnd_toStartOf="@+id/gVertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +69,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/secondary"
-        android:padding="14dp"
         android:text="@string/open_gallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gVertical"
@@ -81,16 +76,13 @@
         app:shapeAppearance="@style/roundCorner" />
 
     <Button
-        android:id="@+id/btnUploadKtp"
+        android:id="@+id/btnUploadKK"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:backgroundTint="@color/primary"
-        android:padding="16dp"
-        android:text="@string/scan_ktp"
-        android:textSize="14sp"
+        android:text="@string/scan_kk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHorizontal2"
