--- a/app/src/main/res/layout/content_error_message.xml
+++ b/app/src/main/res/layout/content_error_message.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:id="@+id/tvErrorMessage"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:id="@+id/tvErrorMessage"
     android:text="@string/error_message"
     android:textColor="@color/black"
     android:textSize="18sp"
