--- a/app/src/main/res/layout/ly_ktp_result.xml
+++ b/app/src/main/res/layout/ly_ktp_result.xml
@@ -483,14 +483,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/primary"
+        android:backgroundTint="@color/green"
         android:padding="16dp"
         android:text="@string/save"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtLGolDarah"
-        app:shapeAppearance="@style/roundCorner" />
+        app:shapeAppearance="@style/RoundShapeButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
