--- a/app/src/main/res/layout/ly_pin.xml
+++ b/app/src/main/res/layout/ly_pin.xml
@@ -71,7 +71,7 @@
             android:layout_marginTop="24dp"
             android:background="@color/white"
             android:text="@string/press_1"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn2"
@@ -85,7 +85,7 @@
             android:background="@color/white"
             android:text="@string/press_2"
             style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn1"
@@ -100,7 +100,7 @@
             android:layout_marginEnd="32dp"
             android:background="@color/white"
             android:text="@string/press_3"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             style="@style/Widget.Material3.Button.TextButton"
             android:textStyle="bold"
@@ -116,7 +116,7 @@
             android:layout_marginStart="32dp"
             android:background="@color/white"
             android:text="@string/press_4"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             style="@style/Widget.Material3.Button.TextButton"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -131,7 +131,7 @@
             android:background="@color/white"
             android:text="@string/press_5"
             style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn4"
@@ -147,7 +147,7 @@
             android:background="@color/white"
             android:text="@string/press_6"
             style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn5"
@@ -163,7 +163,7 @@
             android:background="@color/white"
             android:text="@string/press_7"
             style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toStartOf="@+id/btn8"
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/press_8"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             style="@style/Widget.Material3.Button.TextButton"
@@ -193,7 +193,7 @@
             android:background="@color/white"
             android:text="@string/press_9"
             style="@style/Widget.Material3.Button.TextButton"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/btn8"
@@ -224,7 +224,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="@string/press_0"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="26sp"
             android:textStyle="bold"
             style="@style/Widget.Material3.Button.TextButton"
@@ -239,7 +239,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:background="@drawable/bg_rounded"
-            android:backgroundTint="@color/primary"
+            android:backgroundTint="@color/green"
             android:text="@string/ok"
             android:textColor="@color/white"
             android:textSize="26sp"
