--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.user.UserFragment">
-
+    tools:context=".ui.admin.main.MainActivity">
 
     <TextView
         android:id="@+id/tvHeadline"
@@ -16,7 +15,7 @@
         android:text="@string/welcome"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,38 +33,24 @@
         app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnScan"
+        android:id="@+id/btnEditDataUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/primary"
+        android:backgroundTint="@color/green"
         android:padding="16dp"
-        android:text="@string/scan_dokumen"
+        android:text="@string/edit_penduduk_title"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo"
-        app:shapeAppearance="@style/roundCorner" />
+        app:shapeAppearance="@style/RoundShapeButton" />
+
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnShowData"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/gray"
-        android:padding="16dp"
-        android:text="@string/lihat_data"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnScan"
-        app:shapeAppearance="@style/roundCorner" />
-
-    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -77,21 +62,8 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnShowData"
-        app:shapeAppearance="@style/roundCorner" />
-
-    <include
-        android:id="@+id/lyContentConfirm"
-        layout="@layout/content_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@+id/btnEditDataUser"
+        app:shapeAppearance="@style/RoundShapeButton" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gHorizontal1"
