--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/desa_bulila"
         android:textAlignment="center"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
