--- a/app/src/main/res/layout/content_confirm.xml
+++ b/app/src/main/res/layout/content_confirm.xml
@@ -51,14 +51,14 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/primary"
+            android:backgroundTint="@color/green"
             android:padding="8dp"
             android:text="@string/yes"
             android:textSize="12sp"
             card_view:layout_constraintEnd_toStartOf="@+id/btnNo"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/tvHeadlineOcr"
-            card_view:shapeAppearance="@style/roundCorner" />
+            card_view:shapeAppearance="@style/RoundShapeButton" />
 
         <Button
             android:id="@+id/btnNo"
@@ -69,14 +69,14 @@
             android:layout_marginEnd="8dp"
             android:padding="8dp"
             android:text="@string/tidak"
-            android:textColor="@color/primary"
+            android:textColor="@color/green"
             android:textSize="12sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/btnYes"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/btnYes"
             card_view:layout_constraintTop_toTopOf="@+id/btnYes"
-            card_view:shapeAppearance="@style/roundCorner"
-            card_view:strokeColor="@color/primary" />
+            card_view:shapeAppearance="@style/RoundShapeButton"
+            card_view:strokeColor="@color/green" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gVertical"
