--- a/app/src/main/res/layout/content_loading.xml
+++ b/app/src/main/res/layout/content_loading.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/memuat_data"
-                android:textColor="@color/primary"
+                android:textColor="@color/green"
                 android:textSize="16sp"
                 card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
                 card_view:layout_constraintStart_toStartOf="@+id/progressBar"
