--- a/app/src/main/res/layout/content_proses.xml
+++ b/app/src/main/res/layout/content_proses.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="@string/memproses_permintaan"
-                android:textColor="@color/primary"
+                android:textColor="@color/green"
                 android:textSize="16sp"
                 card_view:layout_constraintEnd_toEndOf="@+id/progressBar"
                 card_view:layout_constraintStart_toStartOf="@+id/progressBar"
