--- a/app/src/main/res/layout/ly_content_alamat.xml
+++ b/app/src/main/res/layout/ly_content_alamat.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/data_alamat"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
