--- a/app/src/main/res/layout/ly_content_data_diri.xml
+++ b/app/src/main/res/layout/ly_content_data_diri.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/data_diri"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/status_kepemilikan_identitas"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
