--- a/app/src/main/res/layout/ly_content_lainnya.xml
+++ b/app/src/main/res/layout/ly_content_lainnya.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:text="@string/data_lainnya"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
