--- a/app/src/main/res/layout/ly_content_pendidikan.xml
+++ b/app/src/main/res/layout/ly_content_pendidikan.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/pendidikan_dan_pekerjaan"
-        android:textColor="@color/primary"
+        android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
