--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,11 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.SnapCencus" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.SnapCencus" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 
-    <style name="roundCorner" parent="">
+    <style name="RoundShapeButton" parent="">
         <item name="cornerSize">20%</item>
     </style>
 
