--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E72929</color>
-    <color name="primary">#1A5D1A</color>
+    <color name="green">#1A5D1A</color>
     <color name="gray">#7D7C7C</color>
     <color name="yellow">#FFC94A</color>
+    <color name="placeholder_gray">#EEEDEB</color>
 </resources>
